--- a/htdocs/composer.json
+++ b/htdocs/composer.json
@@ -5,6 +5,10 @@
     {
       "type": "composer",
       "url": "http://wpackagist.org"
+    },
+    {
+      "type": "git",
+      "url": "git@bitbucket.org:oedevelopers/oe-ng-filter.git"
     }
   ],
   "require": {
@@ -13,6 +17,12 @@
     "wpackagist-plugin/wordpress-importer": "0.6.1",
     "wpackagist-plugin/wp-super-cache": "1.4.7",
     "wpackagist-plugin/wp-super-cache-clear-cache-menu": "1.3.1",
-    "wpackagist-plugin/really-simple-csv-importer": "1.3"
+    "wpackagist-plugin/really-simple-csv-importer": "1.3",
+    "open-ecommerce/oe-ng-filter": "dev-master",
+    "wpackagist-plugin/advanced-custom-fields": "4.4.7",
+    "wpackagist-plugin/wpcat2tag-importer": "dev-trunk"
+  },
+    "config": {
+    "secure-http": false
   }
 }
